# easYoke_VSC

./: .mxproject  CMakeLists.txt  easYoke.ioc  stm32wb55xx_flash_cm4.ld
Core/Inc/: app_conf.h  game_controller.h  hw_conf.h  main.h  stm32wbxx_it.h
Core/Src/: app_entry.c  game_controller.c  main.c  stm32wbxx_hal_msp.c  stm32wbxx_it.c
STM32_WPAN/App/: app_ble.c  custom_app.c  custom_app.h  custom_stm.c  custom_stm.h
cmake/: gcc-arm-none-eabi.cmake
cmake/stm32cubemx/: CMakeLists.txt
